tests/NormalTests/paczka1/small_fuzzy/70155457.err
Error in line 3: yau9KP6S S735 78,46
Error in line 1: 9MEC2fl A418 8,9
Error in line 13: 9MEC2fl S773 9,0
Error in line 12: Rfr S735 55,0
